Fix z-index on deleted requests

--- a/static/style5/_requests.scss
+++ b/static/style5/_requests.scss
@@ -31,6 +31,7 @@ div.panel.requests {
 
 		&.deleted {
 			opacity: 0.3;
+			z-index: -1;
 		}
 	}
 
